--- a/projects/english-writing/看图写句子.md
+++ b/projects/english-writing/看图写句子.md
@@ -6,9 +6,9 @@
 
 
 
-* 看图，请写明什么时间？有谁在什么地方干什么？他们在干什么？
+> * 看图，请写明什么时间？有谁在什么地方干什么？他们在干什么？
 
->![](morning-practice.png)
+> ![](morning-practice.png)
 
 > 星 期 六 的 早 上 ， 阳 光 明 媚 。 冬 冬 和 兰 兰 在 公 园 里 的 大 树 下 做 操 。 胸 前 的 红 领 巾 在 太 阳 的 照 射 下 显 得 更 加 鲜 艳 了 。
 
@@ -17,10 +17,10 @@
 
 
 
-* 看图
+> * 看图
 
 
->![classroom cleaning](classroom-cleaning.png)
+> ![classroom cleaning](classroom-cleaning.png)
 
 > 一 天 下 午 放 学 后 ， 同 学 们 一 起 打 扫 教 室 。 他 们 有 的 扫 地 ， 有 的 擦 桌 子 ， 还 有 的 擦 玻 璃 。 一 会 就 把 教 室 打 扫 干 净 了 。
 
@@ -28,7 +28,7 @@
 
 
 
-* 看图，请你仔细观察，这是什么季节？谁在哪里干什么？你会 表扬他们吗？为什么？请写几句话吧。
+> * 看图，请你仔细观察，这是什么季节？谁在哪里干什么？你会 表扬他们吗？为什么？请写几句话吧。
 
 > ![plant trees](plant-trees.png)
 
@@ -37,7 +37,7 @@
 > TODO
 
 
-* 看图，谁和谁在什么地方？干什么？
+> * 看图，谁和谁在什么地方？干什么？
 
 > ![sketch](sketch.png)
 
@@ -46,7 +46,7 @@
 > TODO
 
 
-* 请你仔细看图，写两三句话
+> * 请你仔细看图，写两三句话
 
 > ![class room cleaning ddll](classroom-cleaning-ddll.png)
 
